src/test/deca/context/invalid/created/acces_field/field_protected_inside_class.deca
// Description :
//    acces à un field protegé à l'intérieur d'un methode
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12 :(3.65) L’attribut est protégé



class B{
	protected int x;
	void met(B a){
		a.x;
	}
}

